k8s/k8s/ingress.yaml
# Ingress for keep-app-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: app-service
                port:
                  number: 80
            path: /
            pathType: Prefix
